--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
+<h1>Blah Blah Blah</h1>
 
-<p>My first paragraph.</p>
+<p>More Blah blah blah</p>
 
 <p>My second paragraph.</p>
 
