Implemented some changes

--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html>
 <body>
 
-<h1>About Our Instructor</h1>
+<h1>Tech Excellence in Cloud Engineering</h1>
 
-<p>Blah blah blah</p>
+<p>Instructor: Cameron McKenzie</p>
 
-<p>My second paragraph.</p>
+<p>About: </p>
 
-<a href="https://www.youtube.com/channel/UCAc45SVFATruhRe_kb1iGkA"> Cameron's YouTube Channel </a>
+<a href="https://camarapr.org/bio-cameron-mckenzie-eng/"> Cameron's YouTube Channel </a>
 
 <p></p>
 <a href="https://www.youtube.com/watch?v=MtN1YnoL46Q"> Cameron's Favorite Song </a>
 <p></p>
-<p>My third paragraph.</p>
+<p>More things about our instructor....</p>
 </body>
 </html>
