Fixed the link to be the right one

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <p>About: </p>
 
-<a href="https://camarapr.org/bio-cameron-mckenzie-eng/"> Cameron's YouTube Channel </a>
+<a href="https://www.youtube.com/channel/UCAc45SVFATruhRe_kb1iGkA"> Cameron's YouTube Channel </a>
 
 <p></p>
 <a href="https://www.youtube.com/watch?v=MtN1YnoL46Q"> Cameron's Favorite Song </a>
