--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html>
 <body>
 
-<h1>Tech Excellence in Cloud Engineering 2020</h1>
+<h1>Tech Excellence in Cloud Engineering 2024</h1>
 
 <p>Instructor: Cameron McKenzie</p>
 
 <p>About: </p>
 
+<a href="https://www.youtube.com/channel/UCAc45SVFATruhRe_kb1iGkA"> Cameron's YouTube Channel </a>
+<a href="https://www.youtube.com/channel/UCAc45SVFATruhRe_kb1iGkA"> Cameron's YouTube Channel </a>
+<a href="https://www.youtube.com/channel/UCAc45SVFATruhRe_kb1iGkA"> Cameron's YouTube Channel </a>
+<a href="https://www.youtube.com/channel/UCAc45SVFATruhRe_kb1iGkA"> Cameron's YouTube Channel </a>
 <a href="https://www.youtube.com/channel/UCAc45SVFATruhRe_kb1iGkA"> Cameron's YouTube Channel </a>
 
 <p></p>
