--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
 
 <a href="https://www.youtube.com/channel/UCAc45SVFATruhRe_kb1iGkA"> Cameron's YouTube Channel </a>
 <p></p>
-<a href="https://www.youtube.com/channel/UCAc45SVFATruhRe_kb1iGkA"> Cameron's YouTube Channel </a>
+<a href="https://github.com/cameronmcnz"> Cameron's GitHub </a>
 <p></p>
-  <a href="https://www.youtube.com/channel/UCAc45SVFATruhRe_kb1iGkA"> Cameron's YouTube Channel </a>
+<a href="https://gitlab.com/cameronmcnz"> Cameron's GitLab </a>
 <p></p>
-  <a href="https://www.youtube.com/channel/UCAc45SVFATruhRe_kb1iGkA"> Cameron's YouTube Channel </a>
-<p></p>
-  <a href="https://www.youtube.com/channel/UCAc45SVFATruhRe_kb1iGkA"> Cameron's YouTube Channel </a>
+<a href="https://www.theserverside.com/"> The Server Side </a>
 
 <p></p>
 <a href="https://www.youtube.com/watch?v=MtN1YnoL46Q"> Cameron's Favorite Song </a>
